--- a/front_challenge/package.json
+++ b/front_challenge/package.json
@@ -1,6 +1,7 @@
 {
   "name": "job-listing",
   "version": "0.0.0",
+   "Author": "Zineeddine998",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
